Fix gantt in dark mode

--- a/axelor-front/src/views/gantt/gantt.module.scss
+++ b/axelor-front/src/views/gantt/gantt.module.scss
@@ -6,11 +6,6 @@
   }
 }
 
-.gantt {
-  --gantt-row-active-bg: #eee;
-  --gantt-cell-active-bg: none;
-}
-
 .cell {
   pointer-events: all;
 }
